theme/stylesheets/screen/core.css
/* ... */
#utility-search p.advanced-search {
	position: absolute;
	right: 0;
}
#utility-search p.advanced-search a {
	text-indent: -1000em;
	display: block;
	width: 150px;
	margin-top: 10px;
	height: 20px;
	background: transparent url(/images/main-advanced-search-button.gif) no-repeat 100% 50%;
}
#utility-search p.advanced-search a span {
	position: absolute;
	left: -1000em;
}
.home p.advanced-search,
.home p.advanced {
	position: absolute;
	left: 0;
	bottom: 0;
	
}
.home p.advanced-search a,
.home p.advanced a {
	display: block;
	width: 253px;
	height: 24px;
	text-indent: -1000em;
	background: transparent url(/images/home-advanced-search.gif) no-repeat 0 0;	
}
.home p.advanced a {
	background-image: url(/images/home-advanced-two.gif);
}


/* @group MAIN */

#main {
	background: #1e2843 url(/images/main-panel-shadow-repeat.gif) repeat-y 50% 0;
	width: 960px;
	margin: 0 auto;
}
#main  .wrapper {
	background: #fff url(/images/main-panel-top.jpg) no-repeat 0 0;
	width: 936px;
	margin-left: 12px;
	float: left;
}

/* @end */

/* @group MAIN CONTENT */
#main-content {
	background: transparent url(/images/main-panel-bottom.jpg) no-repeat 0 100%;
	float: left;
	width: 896px;
	padding: 0;
	padding-bottom: 40px;
	padding-left: 40px;
	line-height: 1.9em;
	position: relative;
}

#main-content  .wrapper {
	width: 856px;
	background: none;
	background-color: transparent;
	margin: 0;
	margin-top: 40px;
	margin-bottom: 10px;
	padding: 0;
}
/* overrides just for .wrapper's inside other .wrappers */
#main-content .wrapper .wrapper {
	padding: 1em 0 0;
	background-color: transparent;
}
#search-results  {
	background-color: transparent;
	margin-bottom: 20px;
}
#search-results .wrapper {
	margin-top: 0;
	margin-bottom: 0;
}
/* @end */

/* @group PAGINATION */
.paginate {
	clear: left;
	border-top: 1px solid #ccc;
	margin: 1.5em 0 0;
	width: 856px;
	padding-top: 15px;
	padding-bottom: 15px;
	min-height: 2em;
}

.paginate ul {
	display: block;
	padding-right: 0px;
	text-align: right;
}

/* except outside of #main-content */
#main-content .paginate ul {
	margin: 0;
}

/* @end */
.paginate li {
	float: left;
	margin: 0 7px;
	color: #888888;
}
.paginate li a {
	margin: 0px -5px;
	padding: 5px 7px;
	border: 1px solid #ccc;
}
.paginate li a:hover {
	background-color: #ccc;
}
.paginate p.select {
	margin: 0;
	padding: 0;
}
.paginate p.select a {
	padding: 0 1em;
}
.paginate p.select a.add-to-fav {
	margin-left: 3em;
	background-image: url(/images/icon-add-favorites.gif);
	padding: 1px 1px 1px 20px;
	line-height: 2em;
	background-position: 0 50%;
	background-repeat: no-repeat;
}
.paginate ul {
	float: right;
	line-height: 2em;
}
.paginate ul li.show-all a {
	margin-right: 15px;
	border: none;
}
.paginate ul li.show-all a:hover {
}
/* off mode */
.paginate li.previous {
	padding-left: 22px;
	padding-right: 5px;
	background: url(/images/arrow-left-off.png) no-repeat 2% 50%;
}
.paginate li.next {
	margin-right: 0px;
	padding-right: 22px;
	padding-left: 5px;
	background: transparent url(/images/arrow-right-off.png) no-repeat 100% 50%;
}
/* on mode */
.paginate li.previous a {
	margin: 0;
	padding: 0;
	padding-left: 22px;
	margin-left: -22px; /* overrides off state */
	background: transparent url(/images/arrow-left-on.png) no-repeat 2% 50%;
	border: none;
	display: block;
}
.paginate li.next a {
	margin: 0;
	padding: 0;
	padding-right: 22px;
	margin-right: -22px; /* overrides off state */
	background: transparent url(/images/arrow-right-on.png) no-repeat 100% 50%;
	border: none;
	display: block;
}


/* SECTION SPECIFIC STYLES */
#main-content h1 {
	background-color: transparent;
	width: 580px;
	margin: 0;
	padding: 0;
	text-shadow: 1px 1px 1px #d4e4f0;
	font-size: 2.5em;
	font-family: Georgia, Times, serif;
	color: #0d61a1;
	font-weight: normal;
	clear: left;
}
#section-header p {
	position: absolute;
	right: 50px;
	top: 33px;
	font-family: Georgia, Times, sans-serif;
	font-size: 15px;
	color: #fcf7e7;
	max-width: 580px; /* keeps text from overlapping on text resize in browser */
}
#section-header h1 {
	padding-left: 40px;
	padding-top: 40px;
}

.discover #section-header {
	background: transparent url(/images/header-discover.jpg) no-repeat;
}

.seek #section-header {
	background: transparent url(/images/header-seek.jpg) no-repeat;
}

.discover #section-header,
.seek #section-header {
	height: 75px;
	margin-top: 18px;
	margin-left: 18px;
}

.discover #section-header h1,
.seek #section-header h1 {
	position: absolute;
	text-indent: -1000em;
}

/* --- HOME PAGE COLOR BARS --- */
#main-bars {
	width: 936px;
	margin: 0 auto;
	padding: 0;
	height: 383px;
	background: #5797d7 url(/images/home-panel-bg_state.png) no-repeat 0 0;
	position: relative;
}
#seek-bar,
#discover-bar {
	position: absolute;
	width: 250px;
	padding-bottom: 0;
}
#seek-bar .wrapper,
#discover-bar .wrapper {
	position: relative;
	height: 300px;
	width: 250px;
	margin-left: 0;
	background-image: none;
	background-color: transparent;
}
#seek-bar {
	left: 350px;
	top: 40px;
}
#discover-bar {
	left: 653px;
	top: 40px;
}
#discover-bar {
}
#logo-bar {
	width: 288px;
	position: absolute;
	top: 260px;
	left: 20px;
}
#logo-bar p {
	text-align: center;
	font-family: georgia, serif;
	color: #1e2843;
	font-size: 2em;
	text-shadow: #ccc 1px 1px 1px;
}

#seek-bar h3,
#discover-bar h3 {
	margin-bottom: 0.5em;
	font: bold 1.8em georgia, times, serif;
	color: #666;
	font-weight: normal;
	letter-spacing: 0px;
	text-shadow: 1px 1px 1px #fff;	
}
#discover-bar h3 a {
	text-decoration: none;
	font-weight: normal;
}
#discover-bar h3 a:hover {
	text-decoration: underline;
}
#seek-bar h4,
#discover-bar h4 {
	color: #666;
	font-family: helvetica, arial, sans;
	font-size: 12px;
	margin: 14px 0;
}

#seek-bar p,
#discover-bar p {
	color: #666;
}
/* - HOME BAR BOTTOM LINKS  - */
/* (absolutely, same link, different place, too)  */
#seek-bar h2 a em,
#discover-bar h2 a em {
	position: absolute;
	height: 61px;
	width: 288px;
	bottom: 0;
}
/* ... */

